Fix Profile Icons on Mobile (#557)

--- a/frontend/src/app/navigation/navigation.component.css
+++ b/frontend/src/app/navigation/navigation.component.css
@@ -144,4 +144,15 @@ a {
     margin-top: 3px;
     margin-left: 3px;
   }
+
+  .login-circle-icon {
+    margin-top: 3px;
+  }
+
+  ::ng-deep #profile-icon {
+    border-radius: 50% !important;
+    margin-left: 3px;
+    margin-top: 3px;
+  }
+
 }
